# OptionStrategy

./: .env.example  .gitignore  README.md  USER_GUIDE.md  app.py  market_data.sqlite  marketobserve.py  netlify.toml  optimization_manual.md  package-lock.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/skills/health/: SKILL.md
.github/workflows/: ci.yml
core/: correlation_validator.py  market_analyzer.py  market_review.py  options_chain_analyzer.py  options_greeks.py  price_dynamic.py
data_pipeline/: __init__.py  cleaning.py  data_service.py  db.py  downloader.py  processing.py  scheduler.py
scripts/: seed_history.py
services/: __init__.py  analysis_service.py  chart_service.py  form_service.py  market_service.py  options_chain_service.py  portfolio_analysis_service.py  validation_service.py
static/: main.js  market_review_chart.js  styles.css
templates/: index.html
tests/: conftest.py  test_chart_time_range.py  test_cleaning.py  test_data_utils.py  test_db.py  test_form_service.py  test_inclusive_end.py  test_utils.py  test_validation.py  test_validation_service.py
utils/: __init__.py  constants.py  data_utils.py  formatters.py  helpers.py  utils.py
